fix some margin gaps

--- a/_inc/client/components/jetpack-termination-dialog/style.scss
+++ b/_inc/client/components/jetpack-termination-dialog/style.scss
@@ -1,7 +1,7 @@
 @import '../../scss/mixin_breakpoint.scss';
 @import '../../scss/variables/_colors.scss';
 
-.jetpack-termination-dialog__wrapper {
+.jetpack-termination-dialog {
 	// dops-card padding is enough
 	.dops-card {
 		margin: 0;
